--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
 html, body {
   height: 100%;
   width: 100%;
+  text-align: justify;
+}
+#profile-photo{
+  width: 100px;
+  margin: auto;
+  display: block;
 }
